# ensicoin-serializer

./: Cargo.toml  readme.md
ensicoin-serializer/: Cargo.toml
ensicoin-serializer/src/: deserializer.rs  lib.rs  serializer.rs  types.rs
ensicoin_serializer_derive/: Cargo.toml
ensicoin_serializer_derive/src/: lib.rs
ensicoin_serializer_derive/tests/: deser.rs
src/: deserializer.rs  lib.rs  serializer.rs  types.rs
