[package]
name = "ensicoin_serializer"
version = "1.0.0"
authors = ["Quentin Boyer <qbsecond@gmail.com>"]
edition = "2018"

description = "Functions to serialize / deserialize to the ensicoin protocol"

readme = "readme.md"
license = " GPL-3.0-or-later"

repository = "https://github.com/EnsicoinDevs/ensicoin_serializer"

[dependencies]
generic-array = "^0.12.0"
typenum = "^1.10.0"
