[package]
name = "ensicoin_serializer"
version = "2.0.7"
authors = ["Quentin Boyer <qbsecond@gmail.com>"]
edition = "2018"

description = "Functions to serialize / deserialize to the ensicoin protocol"

readme = "readme.md"
license = "MIT"

repository = "https://github.com/EnsicoinDevs/ensicoin_serializer"

[dependencies]
ensicoin_serializer_derive = { version = "0.2", optional = true, path="../ensicoin_serializer_derive" }
generic-array = "^0.12.0"
log = { version = "^0.4", optional = true }
typenum = "^1.10.0"
bytes = "^0.4"
