[package]
name = "ensicoin_serializer_derive"
version = "0.2.1"
authors = ["Quentin Boyer <qbsecond@gmail.com>"]
edition = "2018"

description = "Derive macros for ensicoin_serializer"
license = " GPL-3.0-or-later"

repository = "https://github.com/EnsicoinDevs/ensicoin_serializer"

[lib]
proc-macro = true

[dependencies]
syn = "^0.14.4"
quote = "^0.6.3"

[dev-dependencies]
ensicoin_serializer = "1.0"
