[package]
name = "ensicoin_serializer_derive"
version = "0.2.6"
authors = ["Quentin Boyer <qbsecond@gmail.com>"]
edition = "2018"

description = "Derive macros for ensicoin_serializer"
license = "MIT"

repository = "https://github.com/EnsicoinDevs/ensicoin_serializer"

[lib]
proc-macro = true

[dependencies]
syn = "^0.15"
quote = "^0.6"

[dev-dependencies]
ensicoin_serializer = "2.0"
bytes = "0.4"
